test/library/standard/Communication/errors.getNegLoc.good
errors.chpl:17: error: halt reached - The source locale ID (-1) for Communication.get is out of bounds.
